# general-sqlite-database

./: .gitignore  CLAUDE.md  README.md  aim2.db-shm  aim2.db-wal  config.toml  debug_example1.db-shm  debug_example1.db-wal  debug_example2.db-shm  debug_example2.db-wal  dev-install.sh  gui_test_data.py  mkdocs.yml  pyproject.toml  run_tests.sh  test.py  test.sh  test2.py  test2.sh  test3.py  test_gui.duckdb.wal  test_gui.layout.json  test_syntax.m  tmp.py  uml_diagram.md  uml_diagram.puml
.claude/: add-version-history-plan.md  as-table-column-selection-fix.md  bulk-load-all-optimization-plan.md  bulk-save-plan.md  database-manager-refactor-plan.md  dataframe-storage-redesign.md  db-parameter-plan.md  distribute-plan.md  filter-foreach-schema-combos.md  fix-list-column-roundtrip-plan.md  fix-scidb-test-regressions.md  flatten-nested-struct-columns-plan.md  for-each-load-perf.md  for-each-perf-fix.md  lineage-redesign.md  matlab-wrapper-plan.md  multi-result-dataframe-plan.md  network-layer-plan.md  (+17 more)
path-gen/: README.md  pyproject.toml
path-gen/src/pathgen/: __init__.py  generator.py
path-gen/src/scipathgen/: __init__.py  generator.py
path-gen/tests/: test_generator.py
sci-matlab/: README.md  pyproject.toml  setup.md
sci-matlab/src/sci_matlab/: __init__.py  bridge.py
sci-matlab/src/sci_matlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sci-matlab/src/sci_matlab/matlab/+scidb/: BaseVariable.m  Filter.m  Thunk.m  add_to_var_group.m  for_each.m  get_var_group.m  isabsolute.m  register_variable.m
sci-matlab/src/sci_matlab/matlab/+scidb/+internal/: ensure_registered.m  from_python.m  hash_function.m  metadata_to_pydict.m  pylist_to_cell.m  split_version_arg.m
sci-matlab/src/sci_matlab/matlab/+scifor/: PathInput.m  for_each.m
sci-matlab/src/sci_matlab/matlab/+scihist/: configure_database.m  for_each.m
sci-matlab/tests/: test_bridge.py  test_bridge_where.py
sci-matlab/tests/matlab/: TestAsTable.m  TestEndToEnd.m  TestFromPython.m  TestPathInput.m  run_tests.m  setup_paths.m
sci-matlab/tests/matlab/helpers/: BaselineSignal.m  CellTableVar.m  DeltaSignal.m  FilteredSignal.m  GaitData.m  PareticSide.m  RawSignal.m  Side.m  SplitFirst.m  StepLength.m  add_offset.m  split_data.m  sum_inputs.m  table_col_count.m  table_width_fn.m  triple_values.m
sci-matlab/tests/matlab/scidb/: TestConfigureDatabase.m  TestForEach.m  TestForEachSchemaFiltering.m  TestSaveLoad.m  setup_paths.m
sci-matlab/tests/matlab/scifor/: TestPathInput.m  TestSciforForEach.m  TestSciforForEachFeatures.m  TestSciforForEachOutput.m  setup_paths.m
sci-matlab/tests/matlab/scihist/: TestEndToEnd.m  TestForEachWithThunk.m  TestProvenance.m  TestSaveLoadWithThunk.m  TestThunk.m  setup_paths.m
scidb-matlab/: README.md  pyproject.toml  setup.md
scidb-matlab/matlab/+scidb/: BaseVariable.m  Thunk.m  ThunkOutput.m  configure_database.m  list_versions.m  load.m  load_all.m  provenance.m  register_variable.m  save.m
scidb-matlab/matlab/+scidb/+internal/: ensure_registered.m  function_name.m  metadata_to_pykwargs.m  resolve_type_name.m  split_version_arg.m  to_python.m  to_python_input.m
scidb-matlab/src/scidb_matlab/: bridge.py
scidb-matlab/src/scidb_matlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scidb-matlab/src/scidb_matlab/matlab/+scidb/: BaseVariable.asv  BaseVariable.m  Fixed.m  Merge.m  PathGenerator.m  PathInput.m  ThunkOutput.m  configure_database.m  for_each.asv  for_each.m  get_database.m  get_var_group.m  list_var_groups.m  raw_sql.m  remove_from_var_group.m
scidb-matlab/src/scidb_matlab/matlab/+scidb/+internal/: from_python.m  metadata_to_pydict.m  metadata_to_pykwargs.m  pydict_to_struct.m  resolve_var_names.m  split_load_all_args.m  to_python.m  unwrap_input.m
scidb-matlab/tests/: test_bridge.py  test_bridge_where.py
scidb-matlab/tests/matlab/: TestAsTable.asv  TestAsTable.m  TestColumnSelection.m  TestConfigureDatabase.m  TestDataRoundTrip.m  TestDuckDBTypes.m  TestEndToEnd.m  TestForEach.m  TestForEachSchemaFiltering.m  TestForEachWhere.asv  TestForEachWhere.m  TestMerge.m  TestPathGenerator.m  TestProvenance.m  TestRegisterVariable.m  TestSaveFromTable.m  TestSaveLoad.m  TestTableRoundTrip.m  TestThunk.m  TestWhereFilter.m  run_tests.m  setup_paths.m
scidb-matlab/tests/matlab/helpers/: ColumnarStructVar.m  ColumnarStructVar2D.m  MergedResult.m  ProcessedSignal.m  ScalarVar.m  SplitSecond.m  StructVar.m  TableVar.m  count_elements.m  double_table_values.m  double_values.m  noop_func.m  path_length.m  subtract_baseline.m  sum_array.m  sum_table_cols.m  table_dims.m  table_with_session_col.m
scihist-lib/: README.md  pyproject.toml
scihist-lib/src/scihist/: __init__.py  database.py  foreach.py  state.py
scihist-lib/tests/: __init__.py  conftest.py  test_cache_hit.py  test_fixed.py  test_foreach.py  test_generates_file.py  test_lineage_mode.py  test_merge.py  test_skip_computed.py  test_state.py
src/general-sqlite-database/thunk_experimental/: README.md  pyproject.toml  thunks.db
src/general-sqlite-database/thunk_experimental/examples/example1/: README.md
src/general-sqlite-database/thunk_experimental/examples/example2/: README.md
src/general-sqlite-database/thunk_experimental/src/ross_thunk/: build_dag.py  constant.py  data_level.py  thunk.py
src/general-sqlite-database/thunk_experimental/src/ross_thunk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/general-sqlite-database/thunk_experimental/src/ross_thunk/thunk_persistence/: DatabaseConnection.py  OutputThunkStorageHandler.py  SQLiteConnection.py  ThunkDatabase.py
(+224 files in other folders)
