[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scidb-matlab"
version = "0.1.0"
description = "MATLAB bridge for the SciDB scientific data versioning framework"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "scidb>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
