[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scidb-matlab"
version = "0.1.0"
description = "MATLAB bridge for the SciDB scientific data versioning framework"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "scidb>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/scidb_matlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
