[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scihist"
version = "0.1.0"
description = "Lineage-tracked batch execution for scientific data pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SciDB Contributors" }
]
keywords = [
    "batch",
    "pipeline",
    "lineage",
    "provenance",
    "data-science",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "scidb>=0.1.0",
    "thunk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scihist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
